# ciso-assistant-community

./: ARCHITECTURE_INTEGRATION_VERIFICATION.md  ARCHITECTURE_MAPS.md  ARCHITECTURE_MAP_CURRENT.md  ARCHITECTURE_MAP_ORIGINAL.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Contributor License Agreement.md  DDD_MIGRATION_FIXES.md  LICENSE-MIT.txt  LICENSE.md  LICENSE_AUDIT.md  README.md  SECURITY.md  conventional_commits.md  docker-compose.yml
backend/: README.md  conftest_mit.py  pyproject.toml  test_mit_standalone.py
backend/ai_assistant/: __init__.py  apps.py  urls.py
backend/app_tests/: test_vars.py
backend/business_continuity/: apps.py
backend/cal_mit/: __init__.py  models.py
backend/ciso_assistant/: celery.py  settings.py
backend/compliance/: apps.py
backend/connectors/: __init__.py  api.py  urls.py
backend/continuous_monitoring/: __init__.py  apps.py  models.py  urls.py
backend/core/: base_models_mit.py  helpers_mit.py  models.py  permissions.py  urls.py  urls_mit.py  utils_mit.py  views.py
backend/crq/: urls.py  views.py
backend/crq_mit/: __init__.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/data_wizard_mit/: __init__.py  arm_helpers.py  ebios_excel.py  excel_helpers.py
backend/ebios_rm_mit/: __init__.py  helpers.py  models.py  serializers.py  urls.py  views.py
backend/evidence_automation/: __init__.py  apps.py  models.py  urls.py
backend/global_settings_mit/: __init__.py  models.py
backend/iam_mit/: __init__.py  models.py  serializers.py  urls.py  views.py
backend/integrations/: urls.py
backend/integrations_mit/: __init__.py  models.py
backend/library_mit/: LICENSE  __init__.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/metrology_mit/: __init__.py  models.py
backend/pmbok_mit/: __init__.py  models.py
backend/privacy/: apps.py
backend/privacy_mit/: __init__.py  models.py
backend/serdes_mit/: urls.py  (+5 more)
(+649 files in other folders)
