[tool.poetry]
name = "ciso-assistant-community"
version = "0.1.0"
description = ""
authors = ["tash"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.9"
weasyprint = "^68.0"
psycopg2-binary = "^2.9.11"
gunicorn = "^23.0.0"
django-filter = "^24.3"
whitenoise = "^6.11.0"
argon2-cffi = "^23.1.0"
djangorestframework = "^3.16.1"
django-tailwind = "^3.9.1"
pyyaml = "^6.0.3"
django-structlog = "^8.1.0"
structlog = "^24.4.0"
python-dotenv = "^1.2.1"
drf-spectacular = "^0.27.2"
django-rest-knox = "^5.0.2"
django-allauth = { version = "^65.13.1", extras = [
  "socialaccount",
  "saml",
  "mfa",
  "headless",
] }
python-magic = "^0.4.27"
pytz = "^2025.2"
fido2 = "^1.2.0"
humanize = "^4.15.0"
huey = "^2.5.5"
python-docx = "^1.2.0"
docxtpl = "^0.19.1"
numpy = "^2.4.0"
scipy = "^1.16.3"
matplotlib = "^3.10.8"
pandas = "^2.3.3"
openpyxl = "^3.1.5"
django-auditlog = "^3.4.1"
xmlsec = "^1.3.17"
lxml = "^5.3.0"  # For CKL (STIG checklist) XML parsing
boto3 = "^1.42.16"
compliance-trestle = "^3.3.0"
compliance-trestle-fedramp = "^0.4.0"
django-storages = "^1.14.6"
icecream = "^2.1.8"
regex = "^2025.11.3"
prometheus-client = "^0.22.1"
jira = "^3.10.5"
# Optional: Celery for SQS task queue (alternative to Huey)
celery = { version = "^5.4.0", optional = true, extras = ["sqs"] }
pycurl = { version = "^7.45.4", optional = true }  # For SQS transport
django-celery-results = { version = "^2.5.1", optional = true }

[tool.poetry.extras]
celery = ["celery", "pycurl", "django-celery-results"]

[tool.poetry.group.dev.dependencies]
pytest-django = "4.8.0"
pytest-html = "4.1.1"
django-stubs = "5.0.2"
mypy = "^1.9.0"
coverage = "7.5.4"
pre-commit = "3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
